# face-recognition

./: Cargo.toml  README.md
tests/: haarcascade.rs  mtcnn.rs  seetaface.rs
